# mcp-client

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/mcp_client/: __init__.py  main.py
