[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client for ScamWolf, the Advanced Scam analyzer."
readme = "README.md"
authors = [
    { name = "ScamWolf", email = "github@scamwolf.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.10.4",
]

[project.scripts]
mcp-client = "mcp_client:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"
